...
///
/// Example:
/// ```dart
/// void main() async {
///   final request = GetNewAddressRequest(
///     rpcPass: 'rpcPass',
///     coin: 'KMD',
///   );
///
///   try {
///     final response = await request.send();
///
///     print(response.newAddress.address);
...
